src/test/ui/issues/issue-36082.ast.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/issue-36082.rs:23:19
   |
LL |     let val: &_ = x.borrow().0;
   |                   ^^^^^^^^^^  - temporary value dropped here while still borrowed
   |                   |
   |                   temporary value does not live long enough
...
LL | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
